Bug fix for wrapping nav menu

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -13,7 +13,7 @@ nav .menu .logo {
 nav .menu {
   list-style-type: none;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
 }
